--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,5 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html, body, div, span, iframe,
+h1, p,a, img, header, nav, section {
   margin-bottom: 5px;
   margin-top:2px;
   padding: 0;
@@ -39,10 +29,6 @@ time, mark, audio, video {
   color: white;
 }
 
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
 
 img {
   margin-left: 30px;
@@ -71,11 +57,3 @@ ol, ul {
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
   }
-
-  li.active .pill, nav li.active span:last-child, li.active aside ul li, aside ul li.active li, li.active details summary, details li.active summary {
-    background: #3D0B76;
-  }
-  li.active .pill, nav li.active span:last-child, li.active aside ul li, aside ul li.active li, li.active details summary, details li.active summary, li.active .pill *, nav li.active span:last-child *, li.active aside ul li *, aside ul li.active li *, li.active details summary *, details li.active summary * {
-    color: #D12828;
-  }
-  
