--- a/works.css
+++ b/works.css
@@ -4,6 +4,7 @@
   height: 100vh;
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
   overflow: hidden;
   margin: 0;
   padding: 0;
