--- a/works.css
+++ b/works.css
@@ -88,6 +88,7 @@
       background-size: contain;
       background-position: top center;
       background-repeat: no-repeat;
+      min-height: 100vh;
     }
 
   .overlay h1 {
