--- a/works.css
+++ b/works.css
@@ -91,6 +91,13 @@
       background-repeat: no-repeat;
     }
 
+    .overlay {
+      position: static; 
+      background-color: rgba(0, 0, 0, 0.5);
+      padding: 20px;
+      text-align: center;
+    }
+
   .overlay h1 {
     transform: none;
     font-size: 24px;
