--- a/works.css
+++ b/works.css
@@ -86,6 +86,7 @@
 
    .project-section {
       height: auto;
+      padding: 100px, 0;
       background-size: contain;
       background-position: top center;
       background-repeat: no-repeat;
