--- a/works.css
+++ b/works.css
@@ -86,7 +86,7 @@
 
    .project-section {
       height: auto;
-      padding: 100px, 0;
+      padding: auto;
       background-size: contain;
       background-position: top center;
       background-repeat: no-repeat;
