--- a/works.css
+++ b/works.css
@@ -81,8 +81,8 @@
 
    .project-section {
       width: 100%;
-      height: auto;
-      background-size: contain;
+      height: 100%;
+      background-size: cover;
       background-position: top center;
       background-repeat: no-repeat;
     }
