--- a/works.css
+++ b/works.css
@@ -82,7 +82,7 @@
    .project-section {
       width: 100%;
       height: 100%;
-      background-size: cover;
+      background-size: contain;
       background-position: top center;
       background-repeat: no-repeat;
     }
@@ -90,12 +90,13 @@
     .overlay {
       position: static; 
       background-color: rgba(0, 0, 0, 0.5);
+      padding: 20px;
       text-align: center;
     }
 
   .overlay h1 {
     transform: none;
-    font-size: 20px;
+    font-size: 24px;
   }
 
   .overlay p {
