--- a/works.css
+++ b/works.css
@@ -81,7 +81,8 @@
 
    .project-section {
       width: 100%;
-      height: 100%;
+      height: auto;
+      padding: auto;
       background-size: contain;
       background-position: top center;
       background-repeat: no-repeat;
