--- a/works.css
+++ b/works.css
@@ -82,7 +82,7 @@
    .project-section {
       width: 100%;
       height: auto;
-      background-size: contain;
+      background-size: cover;
       background-position: top center;
       background-repeat: no-repeat;
     }
