--- a/works.css
+++ b/works.css
@@ -83,7 +83,7 @@
       width: 100%;
       height: auto;
       background-size: cover;
-      background-position: top center;
+      background-position: center;
       background-repeat: no-repeat;
     }
 
