--- a/works.css
+++ b/works.css
@@ -81,7 +81,7 @@
 
    .project-section {
       width: 100%;
-      height: auto;
+      height: 100vh;
       background-size: cover;
       background-position: top center;
       background-repeat: no-repeat;
