--- a/works.css
+++ b/works.css
@@ -83,8 +83,9 @@
       position: relative;
       width: 100%;
       height: 100vh;
-      background-size: cover;
-      background-position: top center;
+      aspect-ratio: 16 / 9;
+      background-size: contain;
+      background-position: center center;
       background-repeat: no-repeat;
     }
 
