--- a/works.css
+++ b/works.css
@@ -82,10 +82,10 @@
    .project-section {
       position: relative;
       width: 100%;
-      height: 100vh;
-      aspect-ratio: 16 / 9;
+      height: auto;
+      padding-top: 56.25%;
       background-size: contain;
-      background-position: center center;
+      background-position: top center;
       background-repeat: no-repeat;
     }
 
