--- a/works.css
+++ b/works.css
@@ -1,6 +1,7 @@
 
 .project-section {
   position: relative;
+  width: 100%;
   height: 100vh;
   background-size: cover;
   background-position: center;
