--- a/works.css
+++ b/works.css
@@ -102,7 +102,7 @@
   
     .mobile-image img {
       width: 100%;
-      height: auto;
+      height: 100%;
       object-fit: cover;
       display: block;
     }
