--- a/works.css
+++ b/works.css
@@ -96,15 +96,21 @@
     .mobile-image {
       display: block;
       position: relative;
-      aspect-ratio: 16/9;
+      width: 100%;
       overflow: hidden;
+      margin: 0;
+      padding: 0;
     }
   
     .mobile-image img {
       width: 100%;
-      height: 100%;
+      height: auto;
       object-fit: cover;
+      object-position: center center;
       display: block;
+      margin: 0;
+      padding: 0;
+      border: 0;
     }
 
     .overlay {
