--- a/works.css
+++ b/works.css
@@ -118,7 +118,7 @@
       left: 0;
       right: 0;
       bottom: 0;
-      display: flex;
+      display: block;
       justify-content: center;
       align-items: center;
       flex-direction: column;
@@ -129,7 +129,7 @@
     }
 
     .overlay h1 {
-      font-size: 20px;
+      font-size: 25px;
       margin: 0 0 10px
     }
   
