--- a/works.css
+++ b/works.css
@@ -118,7 +118,7 @@
       left: 0;
       right: 0;
       bottom: 0;
-      display: block;
+      display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
