--- a/styles.css
+++ b/styles.css
@@ -160,10 +160,13 @@ ol, ul {
   padding: 0;
   margin: 0;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 #mobile-menu-overlay li {
-  margin: 20px 0;
+  margin: 0;
 }
 
 #mobile-menu-overlay a {
