--- a/styles.css
+++ b/styles.css
@@ -78,9 +78,9 @@ ol, ul {
     font-size: 28px;
     cursor: pointer;
     position: absolute;
-    top: 20px;
-    right: 20px;
-    z-index: 999;
+    top: 50px;
+    right: 50px;
+    z-index: 1001;
   }
 
   #logo img,
@@ -160,6 +160,7 @@ ol, ul {
   padding: 0;
   margin: 0;
   text-align: center;
+  align-items: center;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -167,6 +168,7 @@ ol, ul {
 
 #mobile-menu-overlay li {
   margin: 0;
+  text-align: center;
 }
 
 #mobile-menu-overlay a {
@@ -174,6 +176,7 @@ ol, ul {
   font-size: 24px;
   color: black;
   font-family: 'Space Grotesk', sans-serif;
+  text-align: center;
 }
 
 #mobile-menu-close {
