--- a/cv.css
+++ b/cv.css
@@ -66,14 +66,12 @@ main {
     height: 70vh;
     background-position: center;
   }
-
-  .intro pre {
-    white-space: pre-wrap;       
-    text-align: center;         
-    padding: -10px 5vw;             
-    max-width: 90vw;
-    box-sizing: border-box;     
+             
+  .info-row {
     font-size: 13px;
+    flex-direction: column;
+    align-items: center;
+    gap: 4px;
   }
 
   .overlay h1 {
