--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,8 @@ ol, ul {
     position: absolute;
     top: 20px;
     right: 20px;
+    width: 40px;
+    height: 40px;
     z-index: 1001;
   }
 
