--- a/cv.css
+++ b/cv.css
@@ -92,7 +92,7 @@ main {
   .info-line {
     flex-direction: column;
     align-items: center;
-    font-size: 0.95rem;
+    font-size: 12px;
   }
 
   .label, .value {
